[package]
name = "dsn-spv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release.package.occlum_dcap]
opt-level = 0

[dependencies]
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5"
hex = "0.4"
rocksdb = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false ,features = ["rustls-tls", "blocking"] }
itertools = "0.14.0"
base64 = "0.22.1"
bitcoin = { version = "0.32" }
time = { version = "0.3", features = ["formatting"] }
bincode = { version = "1.3.1" }
arrayref = "0.3.9"
axum = { version = "0.8" }
tokio = { version = "1.4", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2.0"
futures = "0.3.31"

#solana
solana-client = "=2.1.7"
solana-sdk = "=2.1.7"
solana-transaction-status-client-types = "=2.1.7"

dsn-rsv = { git = "https://github.com/DeepSecurityNetwork/dsn-rsv", branch = "main" }

# btc
nakamoto = { git = "https://github.com/DeepSecurityNetwork/nakamoto", branch = "deep" }
#nakamoto = { path = "../nakamoto" }
bitcoinnakamoto = { version = "0.29.2", package  = "bitcoin", features = ["serde"] }

#eth
helios = { git = "https://github.com/DeepSecurityNetwork/helios", branch = "deep" } #, rev = "5d159575ceb0b46ca0c4ff6dab79799d3a5a7469" }
alloy = { version = "0.9", features = ["rpc", "rpc-types"] }
indexmap = "2.7.1"

[patch.'https://github.com/w3f/fflonk']
fflonk = { git = "https://www.github.com/w3f/fflonk", rev = "be95d4c971b1d15b5badfc06ff13f5c07987d484" }

[dev-dependencies]
rand = "0.8.5"

[features]
default = []
test = ["nakamoto/test"]
